# fastapi_learning

./: .env  .gitignore  Dockerfile  build_run_docker.bat  docker-compose.yml  postgres.env
app/: pyproject.toml  run_fastapi.bat
app/app/: alembic.ini  config.py  database.py  main.py
app/app/alembic/: env.py
app/app/alembic/versions/: 24abd3fddafd_create_question_and_choice_models.py
app/polls/: endpoints.py  models.py
