[tool.poetry]
name = "fatapi-react-app"
version = "0.1.0"
description = "App created during following tutorial `https://dev.indooroutdoor.io/the-poll-app-from-django-tutorial-with-fastapi-and-react-1`"
authors = ["Jakub Jezek <jakub@orbi.tools>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.0"
uvicorn = "^0.17.5"
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.6"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
reorder-python-imports = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
